[package]
name = "transmission-rss"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
transmission-rpc = "0.5"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
quick-xml = "0.37"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
